feat: DSTEW-1833 Refactor GetApplication use case to utilize DB projections and add ReadModelMapper